--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="x5logo.png" width="55" height="55" alt="fleek logo">
     </div>
     <div class="navbar-right">
-      <a href="#">Product</a>
+      <a href="/product/">Product</a>
       <a href="#">Resources</a>
       <a href="#">Docs</a>
       <a href="#">Blog</a>
