--- a/product/index.html
+++ b/product/index.html
@@ -9,21 +9,20 @@
 </head>
 <body>
   <div class="wrapper">
-    <!-- 漸層光暈 -->
+
     <div class="glow left-glow"></div>
     <div class="glow right-glow"></div>
 
-    <!-- Navbar 導覽列 -->
     <nav class="navbar">
       <div class="navbar-left">
         <img src="../x5logo.png" width="55" height="55" alt="x5 logo">
       </div>
       <div class="navbar-right">
-        <a href="/">Home</a>
-        <a href="/product/" class="active">Product</a>
-        <a href="/resources/">Resources</a>
+        <a href="/product/">Product</a>
+        <a href="/resources/" class="active">Resources</a>
         <a href="/docs/">Docs</a>
         <a href="/blog/">Blog</a>
+        <a href="/你他媽/">你他媽</a>
         <button class="login-btn">Login</button>
       </div>
     </nav>
