--- a/product/index.html
+++ b/product/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Product - X5 Capital</title>
+  <title>x5capital</title>
   <link rel="icon" href="../x5logo.png" />
   <link rel="stylesheet" href="../styles.css" />
 </head>
