--- a/product/index.html
+++ b/product/index.html
@@ -29,7 +29,7 @@
 
     <div class="divider"></div>
 
-    <!-- Hero 區塊 -->
+    <!-- Hero -->
     <section class="hero">
       <div class="hero-content">
         <h1>還沒弄好</h1>
@@ -40,13 +40,13 @@
 
     <div class="divider"></div>
 
-    <!-- Product Features 區塊 -->
+    <!-- Product Features -->
     <section class="scroll-wrapper">
       <div class="gradient-fade left"></div>
       <div class="gradient-fade right"></div>
 
       <div class="scroll-track">
-        <!-- 單一 feature card 範例，可自行複製、替換內容 -->
+        <!-- feature card -->
         <div class="profile-card">
           <div class="avatar">
             <img src="../images/product1.png" alt="Product 1" />
