--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>x5capital Website</h1>
-      <p>Build the new internet, your way.</p>
+      <p>Build the new internet, your mom.</p>
       <button class="cta-btn">Get Started</button>
     </div>
   </section>
