--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <div class="navbar-right">
       <a href="/product/">Product</a>
+      <a href="/trade">Trade</a>
       <a href="#">Resources</a>
       <a href="#">Docs</a>
       <a href="#">Blog</a>
