--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <img src="x5logo.png" width="55" height="55" alt="fleek logo">
     </div>
     <div class="navbar-right">
+      <a href="/#">Home</a>
       <a href="/product/">Product</a>
       <a href="/trade">Trade</a>
       <a href="#">Resources</a>
