--- a/trade/index.html
+++ b/trade/index.html
@@ -44,6 +44,7 @@
           <li data-symbol="DOGEUSDT">DOGE/USDT</li>
           <li data-symbol="WIFUSDT">WIF/USDT</li>
           <li data-symbol="PEPEUSDT">PEPE/USDT</li>
+          <li data-symbol="LAUNCHCOINUSDT">LAUNCHCOIN/USDT</li>
         </ul>
       </aside>
 
