--- a/product/index.html
+++ b/product/index.html
@@ -18,6 +18,7 @@
         <img src="../x5logo.png" width="55" height="55" alt="x5 logo">
       </div>
       <div class="navbar-right">
+        <a href="/#">Home</a>
         <a href="/product/">Product</a>
         <a href="/resources/" class="active">Resources</a>
         <a href="/docs/">Docs</a>
