--- a/product/index.html
+++ b/product/index.html
@@ -20,10 +20,11 @@
       <div class="navbar-right">
         <a href="/#">Home</a>
         <a href="/product/">Product</a>
-        <a href="/resources/" class="active">Resources</a>
-        <a href="/docs/">Docs</a>
-        <a href="/blog/">Blog</a>
-        <a href="/你他媽/">你他媽</a>
+        <a href="/trade">Trade</a>
+        <a href="#">Resources</a>
+        <a href="#">Docs</a>
+        <a href="#">Blog</a>
+        <a href="#">你他媽</a>
         <button class="login-btn">Login</button>
       </div>
     </nav>
