--- a/product/index.html
+++ b/product/index.html
@@ -21,6 +21,7 @@
         <a href="/#">Home</a>
         <a href="/product/">Product</a>
         <a href="/trade">Trade</a>
+        <a href="/alpha">BinanceAlpha</a>
         <a href="#">Resources</a>
         <a href="#">Docs</a>
         <a href="#">Blog</a>
