--- a/alpha/index.html
+++ b/alpha/index.html
@@ -36,7 +36,7 @@
         <img src="../x5logo.png" width="55" height="55" alt="x5 logo">
       </div>
       <div class="navbar-right">
-        <a href="/#!">Home</a>
+        <a href="/#">Home</a>
         <a href="/product/">Product</a>
         <a href="/trade">Trade</a>
         <a href="/alpha">BinanceAlpha</a>
