--- a/alpha/index.html
+++ b/alpha/index.html
@@ -81,6 +81,7 @@
         <a href="#">Resources</a>
         <a href="#">Docs</a>
         <a href="#">Blog</a>
+        <a href="#">你他媽</a>
         <button class="login-btn">Login</button>
       </div>
     </nav>
