--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       <a href="#">Resources</a>
       <a href="#">Docs</a>
       <a href="#">Blog</a>
-      <a href="#">你他媽</a>
       <button class="login-btn">Login</button>
     </div>
   </nav>
@@ -136,7 +135,24 @@
           </div>
         </div>
       </div>
-      <!-- End -->
+
+      <div class="profile-card">
+        <div class="avatar">
+          <img src="https://i.ibb.co/39jhZZjG/Alu.jpg" alt="avatar" />
+        </div>
+        <div class="profile-info">
+          <div class="profile-header">
+            <p class="name">Alu</p>
+            <div class="tag">掃鏈超新星</div>
+          </div>
+          <div class="social-grid">
+            <a href="https://x.com/alu69420" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+          </div>
+        </div>
+      </div>
+
       <div class="profile-card">
         <div class="avatar">
           <img src="https://i.ibb.co/5xYndpDb/Cheescat2.png" alt="avatar" />
@@ -160,11 +176,28 @@
         </div>
         <div class="profile-info">
           <div class="profile-header">
-            <p class="name">lingo</p>
+            <p class="name">Wingo</p>
             <div class="tag">Crypto</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="profile-card">
+        <div class="avatar">
+          <img src="https://i.ibb.co/Gvj6XkJP/Whisker.jpg" alt="avatar" />
+        </div>
+        <div class="profile-info">
+          <div class="profile-header">
+            <p class="name">WHISKERYYY</p>
+            <div class="tag">先信资本风投小组</div>
+          </div>
+          <div class="social-grid">
+            <a href="https://x.com/whisker2828" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
@@ -228,7 +261,7 @@
         </div>
         <div class="profile-info">
           <div class="profile-header">
-            <p class="name">妹子</p>
+            <p class="name">幕後推手3</p>
             <div class="tag">美女</div>
           </div>
           <div class="social-grid">
