--- a/index.html
+++ b/index.html
@@ -206,6 +206,23 @@
 
       <div class="profile-card">
         <div class="avatar">
+          <img src="https://i.ibb.co/F4p906tM/Hiroshi.jpg" alt="avatar" />
+        </div>
+        <div class="profile-info">
+          <div class="profile-header">
+            <p class="name">Hiroshi</p>
+            <div class="tag">GameFi</div>
+          </div>
+          <div class="social-grid">
+            <a href="https://x.com/visual0125" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="profile-card">
+        <div class="avatar">
           <img src="https://i.ibb.co/nNXK7j9r/HSIEH.jpg" alt="avatar" />
         </div>
         <div class="profile-info">
@@ -257,7 +274,7 @@
 
       <div class="profile-card">
         <div class="avatar">
-          <img src="" alt="avatar" />
+          <img src="https://i.ibb.co/svnf5hfw/112.png" alt="avatar" />
         </div>
         <div class="profile-info">
           <div class="profile-header">
