--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
         <div class="profile-info">
           <div class="profile-header">
-            <p class="name">WHISKERYYY</p>
+            <p class="name">WHISKER</p>
             <div class="tag">先信资本风投小组</div>
           </div>
           <div class="social-grid">
