--- a/index.html
+++ b/index.html
@@ -453,6 +453,12 @@
         <label for="faq15" class="faq-question">ARAM?</label>
         <div class="faq-answer">你說他為什麼不去玩坦克呢。</div>
       </div>
+
+    <div class="faq-item">
+        <input type="checkbox" id="faq16">
+        <label for="faq15" class="faq-question">300u?</label>
+        <div class="faq-answer">坦克邀了幾個bot因此獲得了300u。你說這個機會如果給到燮戈呢?</div>
+      </div>
   </section> 
 
   <!-- all -->
