--- a/index.html
+++ b/index.html
@@ -459,6 +459,12 @@
         <label for="faq16" class="faq-question">300u?</label>
         <div class="faq-answer">坦克邀了幾個bot因此獲得了300u。你說這個機會如果給到燮戈呢?</div>
       </div>
+
+    <div class="faq-item">
+        <input type="checkbox" id="faq17">
+        <label for="faq17" class="faq-question">MaplestoryN?</label>
+        <div class="faq-answer">很難想像一個群主(冰雷被鎖)能叫大家別玩MSU去玩POE，像這樣阻止群友發財的群主哪裡找?</div>
+      </div>
   </section> 
 
   <!-- all -->
