--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       <img src="x5logo.png" width="55" height="55" alt="fleek logo">
     </div>
     <div class="navbar-right">
-      <a href="/#">Home</a>
-      <a href="/product/">Product</a>
+      <a href="/">Home</a>
+      <a href="/product">Product</a>
+      <a href="/airdrop">Airdrop</a>
       <a href="/trade">Trade</a>
       <a href="/alpha">BinanceAlpha</a>
       <a href="#">Resources</a>
