--- a/product/index.html
+++ b/product/index.html
@@ -18,14 +18,14 @@
         <img src="../x5logo.png" width="55" height="55" alt="x5 logo">
       </div>
       <div class="navbar-right">
-        <a href="/#">Home</a>
-        <a href="/product/">Product</a>
+        <a href="/">Home</a>
+        <a href="/product">Product</a>
+        <a href="/airdrop">Airdrop</a>
         <a href="/trade">Trade</a>
         <a href="/alpha">BinanceAlpha</a>
         <a href="#">Resources</a>
         <a href="#">Docs</a>
         <a href="#">Blog</a>
-        <a href="#">你他媽</a>
         <button class="login-btn">Login</button>
       </div>
     </nav>
