--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
           <div class="social-grid">
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://ibb.co/gbT7VTP2" alt="Instagram Logo" /></a>
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
