--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
           <div class="social-grid">
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://ibb.co/gbT7VTP2" alt="Instagram Logo" /></a>
+            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -80,7 +80,7 @@
           </div>
           <div class="social-grid">
             <a href="https://x.com/nacl_x1ao5" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -97,7 +97,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -114,7 +114,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -131,7 +131,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -148,7 +148,7 @@
           </div>
           <div class="social-grid">
             <a href="https://x.com/alu69420" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -165,7 +165,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -182,7 +182,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -199,7 +199,7 @@
           </div>
           <div class="social-grid">
             <a href="https://x.com/whisker2828" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -216,7 +216,7 @@
           </div>
           <div class="social-grid">
             <a href="https://x.com/visual0125" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -233,7 +233,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -250,7 +250,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -267,7 +267,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -284,7 +284,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
@@ -301,7 +301,7 @@
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/instagram.svg" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
           </div>
         </div>
