--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   <section class="trusted-section">
     <h3 class="trusted-title">None of the following companies invested</h3>
     <div class="trusted-logos">
-      <img src="https://i.ibb.co/jkwBvDY1/Coinbase-logo.png" alt="Coinbase" loading="lazy" />
+      <img src="https://i.ibb.co/1YLWqSLH/Coinbase.png" alt="Coinbase" loading="lazy" />
       <img src="https://i.ibb.co/k2xrkgvB/Binance.png" alt="Binance" loading="lazy" />
       <img src="https://i.ibb.co/xSmZ6smT/polychaincapital.png" alt="polychaincapital" loading="lazy" />
       <img src="https://i.ibb.co/4Z61fPB0/dcg.png" alt="dcg" loading="lazy" />
