--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <div class="tag">Crypto</div>
           </div>
           <div class="social-grid">
-            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -79,9 +79,9 @@
             <div class="tag">Crypto</div>
           </div>
           <div class="social-grid">
-            <a href="https://x.com/nacl_x1ao5" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="https://x.com/nacl_x1ao5" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -96,9 +96,9 @@
             <div class="tag">操逼天尊</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -113,9 +113,9 @@
             <div class="tag">大黑急拔</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -130,9 +130,9 @@
             <div class="tag">掃鏈超新星</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -147,9 +147,9 @@
             <div class="tag">掃鏈超新星</div>
           </div>
           <div class="social-grid">
-            <a href="https://x.com/alu69420" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="https://x.com/alu69420" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -164,9 +164,9 @@
             <div class="tag">騎士內閣</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -181,9 +181,9 @@
             <div class="tag">Crypto</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -198,9 +198,9 @@
             <div class="tag">先信资本风投小组</div>
           </div>
           <div class="social-grid">
-            <a href="https://x.com/whisker2828" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="https://x.com/whisker2828" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -215,9 +215,9 @@
             <div class="tag">GameFi</div>
           </div>
           <div class="social-grid">
-            <a href="https://x.com/visual0125" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="https://x.com/visual0125" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -232,9 +232,9 @@
             <div class="tag">全能型選手</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -249,9 +249,9 @@
             <div class="tag">藏鏡人</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -266,9 +266,9 @@
             <div class="tag">美女</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -283,9 +283,9 @@
             <div class="tag">美女</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -300,9 +300,9 @@
             <div class="tag">戰術教練</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/x.svg" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://fleek.xyz/images/landing-page/templates/socials/tiktok.svg" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
