--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <div class="social-grid">
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
-          </div>
+            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
+          /div>
         </div>
       </div>
 
@@ -81,7 +81,7 @@
           <div class="social-grid">
             <a href="https://x.com/nacl_x1ao5" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@
           <div class="social-grid">
             <a href="https://x.com/alu69420" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -166,7 +166,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -183,7 +183,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -200,7 +200,7 @@
           <div class="social-grid">
             <a href="https://x.com/whisker2828" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -217,7 +217,7 @@
           <div class="social-grid">
             <a href="https://x.com/visual0125" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -234,7 +234,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -251,7 +251,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -268,7 +268,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -285,7 +285,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -302,7 +302,7 @@
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/VWsJxn0Z/X5tiktok.png" alt="TikTok Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -352,7 +352,7 @@
   <section class="trusted-section">
     <h3 class="trusted-title">None of the following companies invested</h3>
     <div class="trusted-logos">
-      <img src="https://i.ibb.co/1YLWqSLH/Coinbase.png" alt="Coinbase" loading="lazy" />
+      <img src="https://i.ibb.co/MkY9zB3Z/Coinbase.png" alt="Coinbase" loading="lazy" />
       <img src="https://i.ibb.co/k2xrkgvB/Binance.png" alt="Binance" loading="lazy" />
       <img src="https://i.ibb.co/xSmZ6smT/polychaincapital.png" alt="polychaincapital" loading="lazy" />
       <img src="https://i.ibb.co/4Z61fPB0/dcg.png" alt="dcg" loading="lazy" />
