--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
-          /div>
+          </div>
         </div>
       </div>
 
